# bazel_examples

./: .bazelrc  .gitignore  .travis.yml  BUILD  MODULE.bazel  README.md  WORKSPACE  requirements.in  requirements_lock.txt
.github/workflows/: main.yml
build_file/: BUILD  gtest.BUILD  xmlrunner.BUILD
cpp/: .gitignore  CMakeLists.txt  cmake_build_test.sh  cmake_clean.sh
cpp/deps_examples/: BUILD  multiply_test.cpp
cpp/hello/: BUILD  CMakeLists.txt  hello.cpp  hello.h  hello_test.cpp
cpp/info/: BUILD  CMakeLists.txt  info_provider.cpp  info_provider.h  info_provider_test.cpp  show_info.cpp
cpp/phonebook/: BUILD  hello_proto.cc  hello_proto.cc~
data/: BUILD  words
grpc_def/helloworld/: BUILD  helloworld.proto
java/com/example/info/: BUILD  HelloWorld.java  InfoProvider.java  ShowInfo.java
javatest/com/example/info/: BUILD  HelloJunitTest.java  InfoProviderTest.java
javatests/com/example/apache_collections/: BUILD  CollectionsTest.java
javatests/com/example/info/: BUILD  HelloJunitTest.java
js/mocha/: BUILD  example_test.js  mocha.sh  mocha_test.bzl
protobuf/phonebook/: BUILD  address.proto  person.proto  zip_code.proto
python/environment/: BUILD  read_file_test.py
python/helloworld_grpc/: BUILD  client.py  run.sh  server.py  test.sh
python/infoprj/: BUILD  hello_world.py  info_provider.py  info_provider_test.py  person_test.py  show_info.py
python/pip/: BUILD  type_enforced_test.py
python/xmlreports/: BUILD  xmlrunner_test.py
tools/docker/: test_all.sh
tools/docker/trusty/: Dockerfile  bazel_examples_test.sh  run.sh
tools/docker/ubuntu_20.04/: Dockerfile  bazel_examples_test.sh  run.sh
tools/docker/ubuntu_22.04/: Dockerfile
tools/docker/ubuntu_24.04/: Dockerfile
