
bazel_dep(name = "protobuf", version = "28.0-rc2")
bazel_dep(name = "grpc", version = "1.66.0.bcr.1")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")

bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.0")

bazel_dep(name = "googletest", version = "1.15.2")
