
bazel_dep(name = "protobuf", version = "28.0-rc2")
bazel_dep(name = "grpc", version = "1.66.0.bcr.1")
bazel_dep(name = "rules_proto_grpc", version = "5.0.0")

bazel_dep(name = "rules_python", version = "0.35.0")
bazel_dep(name = "rules_proto_grpc_python", version = "5.0.0")

bazel_dep(name = "googletest", version = "1.15.2")


# xmlrunner

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Python unittest XML xUnit test result output format
# See the xmlrunner.BUILD file for details on the transformation of this target.
xmlrunner_version = "3.0.2"
http_archive(
    name = "github_xmlrunner",
    url = "https://github.com/xmlrunner/unittest-xml-reporting/archive/refs/tags/%s.tar.gz" % xmlrunner_version,
    sha256 = "dbe165386952ec5373d4db5b4ac0644b60b734f4b02b9e575b1d0dc873616ba4",
    build_file = "@//build_file:xmlrunner.BUILD",
    strip_prefix = "unittest-xml-reporting-%s" % xmlrunner_version,
)

